# mlx-node

./: .gitignore  .gitmodules  .yarnrc.yml  CLAUDE.md  Cargo.toml  LICENSE  README.md  example-tools.js  package.json  tsconfig.json  vite.config.ts
crates/genmlx-core/: Cargo.toml  build.rs
crates/genmlx-core/src/: genmlx.rs  lib.rs  memory_napi.rs  transforms.rs
crates/mlx-core/: Cargo.toml  index.cjs  index.d.cts
crates/mlx-core/benches/: attention_vjp_bench.rs
crates/mlx-core/src/: autograd.rs  cache_limit.rs  convert.rs  convert_gemma_import.rs  decode_profiler.rs  genmlx.rs  inference_trace.rs  lib.rs  memory_napi.rs  model_thread.rs  param_manager.rs  profiling.rs  sampling.rs  stream.rs  test_support.rs  tokenizer.rs  training_model.rs  training_state.rs  transforms.rs
crates/mlx-core/src/array/: attention.rs  banded_attention.rs  creation.rs  data.rs  handle.rs  mask.rs  memory.rs  mod.rs  ops.rs  padding.rs  random.rs  reduction.rs  shape.rs
crates/mlx-core/src/calibration/: activation_amax.rs  mod.rs  napi.rs
crates/mlx-core/src/engine/: backend.rs  cmd.rs  decode.rs  dspark_turn.rs  mod.rs  mtp_turn.rs  paged_turn.rs  params.rs  persistence.rs  plan.rs  session.rs  types.rs
crates/mlx-core/src/gradients/: mod.rs  nn_gradients.rs
crates/mlx-core/src/grpo/: advantages.rs  autograd.rs  engine.rs  entropy.rs  loss.rs  mod.rs  rewards.rs
crates/mlx-core/src/models/: chat_napi.rs  mod.rs  quant_dispatch.rs  training_generate.rs
crates/mlx-core/src/models/gemma4/: assistant.rs  assistant_decode.rs  attention.rs  audio_processor.rs  clippable_linear.rs  config.rs  decoder_layer.rs  dspark.rs  dspark_decode.rs  image_processor.rs  layer_cache.rs  mlp.rs  mod.rs  model.rs  moe.rs  output_parser.rs  persistence.rs  (+7 more)
crates/mlx-core/src/moe/: dispatch.rs  mod.rs  router.rs
crates/mlx-core/src/nn/: activations.rs  conv1d.rs  embedding.rs  layers_test.rs  linear.rs  losses.rs  losses_test.rs  mod.rs  normalization.rs  rope.rs
crates/mlx-core/src/optimizers/: adam.rs  adamw.rs  mod.rs  optimizers_test.rs  rmsprop.rs  sgd.rs
crates/mlx-core/src/output_store/: mod.rs  reader.rs  store.rs  types.rs  writer.rs
crates/mlx-core/src/quant/: fp8_activation.rs  mod.rs
crates/mlx-core/src/sft/: autograd.rs  engine.rs
crates/mlx-core/src/tools/: mod.rs
crates/mlx-core/src/transformer/: attention.rs  attention_vjp_test.rs  batch_kv_cache.rs  block.rs  fused_attention.rs  hybrid_kv_cache_manager.rs  kv_cache.rs  kv_cache_spec.rs  mlp.rs  mlp_test.rs  mod.rs  paged_attention.rs  paged_kv_cache_adapter.rs  quantized_kv_cache.rs  quantized_kv_cache_test.rs  rotating_kv_cache.rs
crates/mlx-core/src/utils/: foreign_weights.rs  functional.rs  gemma_quant_repack.rs  gguf.rs  imatrix.rs  mod.rs  pickle.rs  safetensors.rs
crates/mlx-core/src/vision/: conv2d.rs  embeddings.rs  encoder.rs  interpolate.rs  mod.rs  projector.rs  rope_vision.rs
crates/mlx-core/tests/: adapter_e2e_validation.rs  gemma4_assistant.rs  gemma4_dspark.rs  gemma4_paged_vs_flat_parity.rs  gemma4_paged_vs_flat_vlm_parity.rs  gemma4_session.rs  gemma4_vl_image_chat.rs  lfm2_compiled_e2e.rs  lfm2_moe_session.rs  lfm2_paged_vs_flat_parity.rs  lfm2_session.rs  p2_paged_thinking_honors_enable.rs  qwen3_5_delta_chat.rs  qwen3_5_flat_vlm_image_chat.rs  qwen3_5_moe_chunked_prefill.rs  qwen3_5_moe_flat_vlm_image_chat.rs  qwen3_5_moe_mtp_committed_history.rs  qwen3_5_moe_mtp_synthetic_v1.rs  qwen3_5_moe_mtp_synthetic_v2.rs  qwen3_5_moe_paged_vs_flat_parity.rs  qwen3_5_moe_paged_vs_flat_vlm_parity.rs  qwen3_5_moe_reset_purge.rs  qwen3_5_moe_session.rs  qwen3_5_moe_tier2_branch_roundtrip.rs  qwen3_5_moe_vl_image_chat.rs  qwen3_5_paged_vs_flat_parity.rs  qwen3_5_paged_vs_flat_vlm_parity.rs  qwen3_5_session.rs  qwen3_5_sym8_smoke.rs  qwen3_5_vl_image_chat.rs  qwen3_paged_vs_flat_parity.rs
crates/mlx-core/tests/common/: mod.rs
crates/mlx-core/tests/fixtures/: lfm2_moe_divergence_mlx_lm.txt
crates/mlx-db/: Cargo.toml
crates/mlx-db/src/: connection.rs  error.rs  lib.rs  reader.rs  schema.rs  types.rs  writer.rs
crates/mlx-paged-attn/: Cargo.toml
crates/mlx-paged-attn/benches/: prefix_cache_lru_bench.rs
crates/mlx-paged-attn/metal/cache/: reshape_and_cache.metal
crates/mlx-paged-attn/src/: attention_layer.rs  block_allocator.rs  block_table.rs  layer_kv_pool.rs  lib.rs  metal_dtype.rs  scheduler.rs
crates/mlx-paged-attn/src/metal/: copy_blocks.rs  mod.rs  paged_attention.rs  reshape_and_cache.rs  state.rs  swap_blocks.rs
crates/mlx-paged-attn/tests/: paged_ops_smoke.rs
crates/mlx-tui/: Cargo.toml
crates/mlx-tui/src/: app.rs  commands.rs  logging.rs  main.rs  messages.rs
crates/mlx-tui/src/ui/: config.rs  header.rs  logs.rs  metrics.rs  mod.rs  progress.rs  prompt.rs  sample_detail.rs  samples.rs
(+344 files in other folders)
