[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
rust-version = "1.89.0"
edition = "2024"
version = "0.0.0"

[workspace.dependencies]
cc = "1"
cmake = "0.1"
futures = "0.3"
half = "2.4"
libc = "0.2"
mimalloc-safe = { version = "0.1" }
parquet = { version = "57", features = ["arrow"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["std", "fmt", "json"] }
tokenizers = "0.22"
minijinja = { version = "2.5", features = ["json"] }
uuid = { version = "1.11", features = ["v4"] }
regex = "1.11"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# NAPI-RS
napi = { version = "3", features = ["napi10", "async", "tokio_fs", "serde-json"] }
napi-derive = "3"
napi-build = "2"

# Workspace packages
mlx-sys = { path = "crates/mlx-sys" }
mlx-core = { path = "crates/mlx-core" }
mlx-paged-attn = { path = "crates/mlx-paged-attn" }
mlx-db = { path = "crates/mlx-db" }

[profile.release]
lto = true
codegen-units = 1
