[package]
name = "mlx-core"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = { workspace = true }
half = { workspace = true }
libc = { workspace = true }
mlx-sys = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokenizers = { workspace = true }
minijinja = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mlx-paged-attn = { workspace = true }
mlx-db = { workspace = true }
sqlx = { workspace = true }

[dependencies.mimalloc-safe]
workspace = true
features = ["skip_collect_on_exit", "v3"]

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
napi-build = { workspace = true }

[[bench]]
name = "attention_vjp_bench"
harness = false
