[package]
name = "mlx-db"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
